; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_iss.c_iss_probe.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_iss.c_iss_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@ISS_SIG = common dso_local global i32 0, align 4
@ISS_SIG_LEN = common dso_local global i32 0, align 4
@AVPROBE_SCORE_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @iss_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iss_probe(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @ISS_SIG, align 4
  %8 = load i32, i32* @ISS_SIG_LEN, align 4
  %9 = call i64 @strncmp(i32 %6, i32 %7, i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %14

12:                                               ; preds = %1
  %13 = load i32, i32* @AVPROBE_SCORE_MAX, align 4
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %12, %11
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i64 @strncmp(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
